mais modificações no layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -946,6 +946,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:descendantFocusability="beforeDescendants"
             android:fillViewport="true">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/pag_8"
@@ -1078,6 +1079,7 @@
                 android:inputType="text"
                 android:background="@drawable/campo_rx"
                 android:gravity="center"
+                android:imeOptions="flagNoExtractUi|actionNext"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/logger_status"
                 app:layout_constraintStart_toStartOf="@id/guideline_0"
@@ -1097,7 +1099,7 @@
                 android:ems="10"
                 android:hint="RX RST"
                 android:textStyle="bold"
-                android:imeOptions="flagNoExtractUi"
+                android:imeOptions="flagNoExtractUi|actionNext"
                 android:inputType="number"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guideline_25"
@@ -1116,7 +1118,7 @@
                 android:background="@drawable/campo_rx"
                 android:ems="10"
                 android:hint="RX Nr"
-                android:imeOptions="flagNoExtractUi"
+                android:imeOptions="flagNoExtractUi|actionNext"
                 android:inputType="number"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -1137,7 +1139,7 @@
                 android:ems="10"
                 android:hint="RX Exch"
                 android:textStyle="bold"
-                android:imeOptions="flagNoExtractUi"
+                android:imeOptions="flagNoExtractUi|actionNext"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guideline_5"
@@ -1157,7 +1159,7 @@
                 android:ems="10"
                 android:hint="TX RST"
                 android:textStyle="bold"
-                android:imeOptions="flagNoExtractUi"
+                android:imeOptions="flagNoExtractUi|actionNext"
                 android:inputType="number"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guideline_625"
@@ -1177,7 +1179,7 @@
                 android:ems="10"
                 android:hint="TX Nr"
                 android:textStyle="bold"
-                android:imeOptions="flagNoExtractUi"
+                android:imeOptions="flagNoExtractUi|actionNext"
                 android:inputType="number"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guideline_75"
@@ -1197,7 +1199,7 @@
                 android:ems="10"
                 android:hint="TX Exch"
                 android:textStyle="bold"
-                android:imeOptions="flagNoExtractUi"
+                android:imeOptions="flagNoExtractUi|actionDone"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guideline_875"
@@ -1278,14 +1280,14 @@
 
             <LinearLayout
                 android:id="@+id/header_qso_table"
-                android:layout_width="650dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="#FFF4F4"
                 android:orientation="horizontal"
                 android:padding="4dp"
                 app:layout_constraintBottom_toTopOf="@+id/recyclerViewQSOs"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editText_RX_Call"
                 app:layout_constraintVertical_bias="0.5">
@@ -1387,11 +1389,11 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewQSOs"
-                android:layout_width="650dp"
+                android:layout_width="0dp"
                 android:layout_height="120dp"
                 app:layout_constraintBottom_toTopOf="@+id/button_wipe_QSO"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.567"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/header_qso_table"
                 app:layout_constraintVertical_bias="0.5" />
