--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -941,7 +941,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
-          <!--pagina-->
+
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
@@ -1401,83 +1401,85 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/pag_9"
+        <!--pagina-->
+        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fillViewport="true"
             android:background="#CCC2C2">
 
-            <TextView
-                android:id="@+id/label_about"
-                android:layout_width="213dp"
-                android:layout_height="25dp"
-                android:layout_marginTop="41dp"
-                android:layout_marginBottom="345dp"
-                android:background="@drawable/rouded_button"
-                android:gravity="center"
-                android:text="ABOUT"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/pag_9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="24dp">
 
-            <TextView
-                android:id="@+id/label_developed"
-                android:layout_width="335dp"
-                android:layout_height="85dp"
-                android:layout_marginTop="216dp"
-                android:layout_marginBottom="110dp"
-                android:background="@android:drawable/alert_light_frame"
-                android:gravity="center"
-                android:text="py1xr.qsl@gmail.com\n github.com/oresmius/qru_kotlin"
-                android:textColor="#020202"
-                android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                <!-- Título -->
+                <TextView
+                    android:id="@+id/label_about"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rouded_button"
+                    android:gravity="center"
+                    android:text="ABOUT"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp"
+                    android:layout_marginBottom="24dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
-            <TextView
-                android:id="@+id/label_contact"
-                android:layout_width="247dp"
-                android:layout_height="127dp"
-                android:layout_marginTop="89dp"
-                android:layout_marginBottom="195dp"
-                android:background="@android:drawable/alert_light_frame"
-                android:gravity="center"
-                android:text="QRU - V0.3 - Developed by:\
-                PY6FX / PY1XR - Fábio\
-                Recruit 0101 (Chat GPT)"
-                android:textColor="#0B0B0B"
-                android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                <!-- Informações de versão / autores -->
+                <TextView
+                    android:id="@+id/label_contact"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@android:drawable/alert_light_frame"
+                    android:gravity="center"
+                    android:text="QRU - V0.3\nDeveloped by:\nPY6FX / PY1XR - Fábio\nRecruit 0101 (Chat GPT)"
+                    android:textColor="#0B0B0B"
+                    android:textSize="16sp"
+                    android:padding="12dp"
+                    app:layout_constraintTop_toBottomOf="@id/label_about"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
-            <Button
-                android:id="@+id/button_about_back"
-                android:layout_width="167dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="308dp"
-                android:layout_marginBottom="53dp"
-                android:background="@drawable/rouded_button"
-                android:gravity="center"
-                android:text="BACK"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                <!-- Contato -->
+                <TextView
+                    android:id="@+id/label_developed"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@android:drawable/alert_light_frame"
+                    android:gravity="center"
+                    android:text="py1xr.qsl@gmail.com\ngithub.com/oresmius/qru_kotlin"
+                    android:textColor="#020202"
+                    android:textSize="16sp"
+                    android:padding="12dp"
+                    app:layout_constraintTop_toBottomOf="@id/label_contact"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <!-- Botão BACK -->
+                <Button
+                    android:id="@+id/button_about_back"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:background="@drawable/rouded_button"
+                    android:gravity="center"
+                    android:text="BACK"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp"
+                    android:paddingVertical="12dp"
+                    app:layout_constraintTop_toBottomOf="@id/label_developed"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
 
     </ViewFlipper>
 </androidx.constraintlayout.widget.ConstraintLayout>
