--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -289,7 +289,7 @@
                 </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-            <!--pagina-->
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/pag_3"
                 android:layout_width="match_parent"
@@ -1402,7 +1402,7 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </ScrollView>
-
+            <!--pagina-->
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -1492,10 +1492,12 @@
                         android:id="@+id/about_599_logo"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:layout_marginTop="25dp"
+                        android:layout_marginTop="0dp"
                         app:srcCompat="@drawable/logo_599"
                         app:layout_constraintEnd_toStartOf="@+id/label_contact"
                         app:layout_constraintTop_toBottomOf="@+id/about_qru_logo"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toTopOf="@+id/button_about_back"
                         app:layout_constraintDimensionRatio="6:3"
                         />
 
