correções do comportamento das caixas de testo do logger

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1078,7 +1078,7 @@
                         android:layout_width="0dp"
                         android:layout_height="66dp"
                         android:hint="RX Call"
-                        android:inputType="text"
+                        android:inputType="text|textCapCharacters"
                         android:background="@drawable/campo_rx"
                         android:gravity="center"
                         android:imeOptions="flagNoExtractUi|actionNext"
@@ -1142,7 +1142,7 @@
                         android:hint="RX Exch"
                         android:textStyle="bold"
                         android:imeOptions="flagNoExtractUi|actionNext"
-                        android:inputType="text"
+                        android:inputType="text|textCapCharacters"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@id/guideline_5"
                         app:layout_constraintStart_toStartOf="@id/guideline_375"
@@ -1161,7 +1161,7 @@
                         android:ems="10"
                         android:hint="TX RST"
                         android:textStyle="bold"
-                        android:imeOptions="flagNoExtractUi|actionNext"
+                        android:imeOptions="flagNoExtractUi|actionDone"
                         android:inputType="number"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@id/guideline_625"
@@ -1200,8 +1200,7 @@
                         android:ems="10"
                         android:hint="TX Exch"
                         android:textStyle="bold"
-                        android:imeOptions="flagNoExtractUi|actionDone"
-                        android:inputType="text"
+                        android:inputType="text|textCapCharacters"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@id/guideline_875"
                         app:layout_constraintStart_toStartOf="@id/guideline_75"
