--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1225,7 +1225,7 @@
 
                     <Button
                         android:id="@+id/button_log_QSO"
-                        android:layout_width="130dp"
+                        android:layout_width="0dp"
                         android:layout_height="30dp"
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="20dp"
@@ -1411,6 +1411,21 @@
 
 
                         />
+
+                    <Button
+                        android:id="@+id/button_logger_mem"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:text="MEM"
+                        android:background="@drawable/rouded_button"
+                        android:textColor="#FFFFFF"
+                        android:textSize="20sp"
+                        android:layout_marginTop="60dp"
+                        app:layout_constraintStart_toEndOf="@id/editText_TX_Exch"
+                        app:layout_constraintTop_toBottomOf="@id/mode_indicator"
+                        app:layout_constraintEnd_toEndOf="parent"
+
+                         />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
